--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 <body>
-    <div class="container-fluid bg-primary d-flex text-center">
-        <div class="col-6 bg-primary p-2">
-            <div class="card p-2 text-start">
+    <div class="container-lg d-flex flex-wrap text-center">
+        <div class="col-12 col-lg-6 p-2">
+            <div class="card p-2 text-start shadow border-0">
                 <h1 class="fw-light fs-2 text-center"><b>AYT</b> Puanı Hesaplama</h1>
                 <div class="d-flex flex-row justify-content-around text-center">
                     <div class="col-4"></div>
@@ -290,8 +290,8 @@
 
             </div>
         </div>
-        <div class="col-6 bg-primary p-2">
-                <div class="card p-2 text-start mb-3">
+        <div class="col-12 col-lg-6 p-2">
+                <div class="card p-2 text-start mb-3 shadow border-0">
                     <h1 class="fw-light fs-2 text-center"><b>TYT</b> Puanı Hesaplama</h1>
                     <div class="d-flex flex-row justify-content-around text-center">
                         <div class="col-4"></div>
@@ -390,7 +390,7 @@
                     <hr>
 
                 </div>
-                <div class="card p-2 text-start mb-3">
+                <div class="card p-2 text-start mb-3 shadow border-0">
                     <h1 class="fw-light fs-2 text-center"><b>Ortaöğretim</b> Başarı Puanı</h1>
                     <div class="d-flex flex-row justify-content-around">
                         <div class="col-4">
@@ -424,7 +424,7 @@
 
                 </div>
 
-                <div class="card p-2 text-start ">
+                <div class="card p-2 text-start mb-3 shadow border-0">
                     <h1 class="fw-light fs-2 text-center"><b>Sonuçlar</b></h1>
                     <div class="row justify-content-around">
                         <h2 class="col-3 fs-4">Puan Türü</h2>
@@ -455,6 +455,11 @@
                         <input class="col-3 input-box border border-0 rounded-3 text-start output-box" type="number" placeholder="-" readonly>
                         <input class="col-4 input-box border border-0 rounded-3 text-start output-box" type="number" placeholder="-" readonly>
                     </div>
+                </div>
+                <div class="row p-2 justify-content-between">
+                    <input class="button bg-danger border border-3 border-danger rounded-3 fs-5 text-white" type="button" value="Hesapla">
+                    <input class="button bg-body border border-3 border-danger rounded-3 fs-5 text-danger" type="button" value="Temizle">
+
                 </div>
     </div>
 </body>
@@ -500,6 +505,10 @@
 
     .output-box:focus{
         outline: none;
+    }
+    .button{
+        width: 45%;
+        height: 50px;
     }
     #checkbox{
         height: 15px;
