minus, comma, dot and e ignored from input

--- a/index.html
+++ b/index.html
@@ -611,4 +611,11 @@ function clearErrors(){
    });
 }
 
+document.querySelector("input").addEventListener("keypress", function (evt) {
+    if (evt.which != 8 && evt.which != 0 && evt.which < 48 || evt.which > 57)
+    {
+        evt.preventDefault();
+    }
+});
+
 </script>
